--- a/templates/job_partials/operation.erb
+++ b/templates/job_partials/operation.erb
@@ -9,7 +9,7 @@ respawn
 <% end -%>
 <% ########################## -%>
 <% if @respawn && @respawn_limit -%>
-respawn limit <%= respawn_limit %>
+respawn limit <%= @respawn_limit %>
 <% end -%>
 <% ########################## -%>
 <% if @normal_exit -%>
